src/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
*,
*::before,
*::after {
	box-sizing: border-box;
}
html,
body {
	scroll-behavior: smooth;
	transition: all;
}

* {
	margin: 0;
}
img {
	display: block;
	max-width: 100%;
	object-fit: cover;
}
p,
h1,
h2,
h3,
h4,
h5,
h6 {
	overflow-wrap: break-word;
}
button {
	cursor: pointer;
	border: none;
}
button:hover {
	opacity: 0.7;
}

body {
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	font-family: Poppins, sans-serif;
	width: 100%;
	margin: 0 auto;
	height: 100%;
	/* background-color: #931243; */
}
@media (min-width: 768px) {
	body {
		width: 90%;
	}
}

@keyframes load-spinner {
	to {
		transform: rotate(360deg);
	}
}

